macros/tests/gateway_config/expect-api.stderr
error: structure must be of type `Api`
 --> $DIR/expect-api.rs:6:13
  |
6 |             NotApi {
  |             ^^^^^^
